--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
+        "nelmio/api-doc-bundle": "^4.9",
         "psr/log": "1.1.4",
         "stof/doctrine-extensions-bundle": "^1.6",
         "symfony/asset": "6.0.*",
@@ -25,6 +26,7 @@
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
+        "symfony/serializer": "6.0.*",
         "symfony/translation": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
         "symfony/uid": "6.0.*",
@@ -35,7 +37,6 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "phpstan/phpstan": "^1.7",
         "roave/security-advisories": "dev-latest",
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/debug-bundle": "6.0.*",
