--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,24 @@ version: '3.9'
 services:
   server:
     build: .
-    container_name: 'test-web-atrio_server'
+    container_name: 'test_server'
     depends_on:
       - database
     networks:
       - project-network
     volumes:
-      - .:/var/www/test-web-atrio
+      - .:/var/www/test
 
   proxy:
     image: nginx:1.9.15-alpine
-    container_name: 'test-web-atrio_proxy'
+    container_name: 'test_proxy'
     ports:
       - target: 80
         published: 8080
         protocol: tcp
     volumes:
       - ./docker/nginx:/etc/nginx/conf.d
-      - ./public:/var/www/project
+      - ./public:/var/www/test
     networks:
       - project-network
     depends_on:
@@ -29,7 +29,7 @@ services:
 
   database:
     image: postgres:14.2-alpine
-    container_name: 'test-web-atrio_database'
+    container_name: 'test_database'
     environment:
       - POSTGRES_DB=main_dev
       - POSTGRES_PASSWORD=app
