--- a/docker/nginx/project_local.conf
+++ b/docker/nginx/project_local.conf
@@ -1,6 +1,6 @@
 server {
     server_name localhost;
-    root /var/www/project;
+    root /var/www/test;
 
     client_max_body_size 16M;
 
@@ -29,7 +29,7 @@ server {
         # Otherwise, PHP's OPcache may not properly detect changes to
         # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
         # for more information).
-        fastcgi_param SCRIPT_FILENAME /var/www/project/public/index.php;
+        fastcgi_param SCRIPT_FILENAME /var/www/test/public/index.php;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
         # Prevents URIs that include the front controller. This will 404:
         # http://domain.tld/index.php/some-path
